Bug 455215, make editable fields draggable, r=smaug,sr=roc